--- a/docs/02.03 - Monitoring Model Driven Apps - Common Data Service for Analytics.md
+++ b/docs/02.03 - Monitoring Model Driven Apps - Common Data Service for Analytics.md
@@ -48,9 +48,7 @@ The Usage report is extremely helpful for insight into **user environment access
 
 The charts in the **Mode of Access report** can help answer questions about **recently introduced browsers or devices users are using to interact** with the platform. If we see a rise in errors we begin to examine if client usage plays a part. The **Active users by security role chart** can help identify roles during a time frame. If the particular **organization has multiple apps with access controlled by security roles**, this chart could prove helpful.
 
-<insert chart>
-
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/NavigateTo.JPG"  />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/CDSA/CDSA-ModeOfAccess=ActiveUsersBySecurityRole.JPG"  />
 
 [The **Entity Usage** dashboard](https://docs.microsoft.com/en-us/power-platform/admin/analytics-common-data-service#active-users) displays the **most active entities** **by operation**, split by **out of the box (OOB)** and **custom entities**.
 
@@ -60,9 +58,7 @@ The most used custom entities chart helps visualize if a recent update made by m
 
 In the below image I can see that *bot content* has recently been created and updated with tells me a user has provisioned a **Microsoft Virtual Agent** and is authoring content.
 
-<insert most used entity image>
-
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/NavigateTo.JPG"  />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/CDSA/CDSA-EntityUsage-MostUsedCustomEntitiesChart.JPG"  />
 
 [The **System Jobs** dashboard](https://docs.microsoft.com/en-us/power-platform/admin/analytics-common-data-service#system-jobs) is useful to admins for help understanding **throughput numbers** and **pass rates**. The **active and top workflow reports** show the **top 10 most executed and failing workflows** for the overall specified time, while the **throughput metrics are broken down per hours**.
 
@@ -72,9 +68,7 @@ In the below image I can see that *bot content* has recently been created and up
 
 The **System jobs execution and backlog chart** I find extremely useful and recommend reviewing this regularly. The below gif shows how to **filter down to a hourly window** and the **difference between the time shown on the chart and my filter**.
 
-<insert gif>
-
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/NavigateTo.JPG"  />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/CDSA/SystemJobsExecutionAndBacklogFilteredToHours.gif"  />
 
 Shown below is another dashboard I find very useful, [the **Plug-Ins** Dashboard](https://docs.microsoft.com/en-us/power-platform/admin/analytics-common-data-service#plug-ins). Within this dashboard, data points for **success or pass rate**, **number of executions**, **most active plug-ins** and **top plug-ins by failure** can be found.
 
@@ -82,9 +76,7 @@ Shown below is another dashboard I find very useful, [the **Plug-Ins** Dashboard
 
 The **Average plug-in execution time chart** will visualize the averages based on our filtered time frame. Filtering can help reduce the scope so the average can be calculated from a more narrow number of plug-ins. Once an offending plug-in has been determined, analysts can use additional tools offered by the Power Platform to further drill down to specific executions.
 
-<show average execution image>
-
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/NavigateTo.JPG"  />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/CDSA/CDSA-Plugins-AveragePluginExecutionTime.JPG"  />
 
 [The **Mailbox Usage** dashboard](https://docs.microsoft.com/en-us/power-platform/admin/analytics-common-data-service#mailbox-usage) enables admins to visualize **mailbox configurations** and **active email mailboxes and profiles**. Utilizing data from [Server-side Synchronization](https://docs.microsoft.com/en-us/power-platform/admin/server-side-synchronization), admins can review **incoming and outgoing configurations**, **which mailboxes are enabled** and **how many are using the service**.
 
@@ -96,7 +88,7 @@ The **Common Data Service API** is heavily used in the **Power Apps platform** a
 
 At the bottom of this dashboard is **the Total API calls chart**. This chart is useful to investigate when the platform may be **experiencing significant demand** and **which calls are being used**. From there, we can identify where improvements could be made with techniques such as **batching or caching** to reduce the number of calls made.
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/CDSA/CDSA-Overview-API-MostUsedAPI.JPG"  />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/CDSA/CDSA-Overview-API-TotalApiCalls.JPG"  />
 
 #### Filtering the data returned
 
