--- a/docs/04.01 - Monitoring Power Virtual Agents - Analytics.md
+++ b/docs/04.01 - Monitoring Power Virtual Agents - Analytics.md
@@ -2,7 +2,11 @@
 
 ## Summary
 
-**Power Virtual Agents** empowers teams to easily create powerful bots using a guided, no-code graphical interface without the need for data scientists or developers. Power Virtual Agents addresses many of the major issues with bot building in the industry today. It eliminates the gap between the subject matter experts and the development teams building the bots, and the long latency between teams recognizing an issue and updating the bot to address it. It removes the complexity of exposing teams to the nuances of conversational AI and the need to write complex code. And, it minimizes the IT effort required to deploy and maintain a custom conversational solution.
+Microsoft Power Virtual Agents provide Makers the ability to create virtual assistances and agents to help customers and employees. An authoring canvas guides makers through the process of building and publishing bots without the need of developing with the Microsoft Bot Framework. This removes the barriers of entry, allowing designers and Makers to focus on rich meaningful conversations.
+
+This article will focus on Power Virtual Agent Analytics and how to review the metrics from user sessions and conversations to work towards increased customer satisfaction and user productivity. 
+
+## The Case for Power Virtual Agents
 
 Using Power Virtual Agents, you can:
 
