added team memver verbuage

--- a/docs/02.03 - Monitoring Model Driven Apps - Common Data Service for Analytics.md
+++ b/docs/02.03 - Monitoring Model Driven Apps - Common Data Service for Analytics.md
@@ -104,11 +104,13 @@ Data from the **Common Data Service for Analytics** dashboards can be exported t
 
 <img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/CDSA/CDSA-Download-AvailableOptions.JPG" style="zoom:33%;" />
 
-The data included in the downloaded spreadsheet will present more data than shown in the dashboard reports. For instance the **API Used** spreadsheet shows operations for each entity down to a single call.
+The data included in the downloaded spreadsheet will present more data than shown in the dashboard reports. For instance the **API Used** spreadsheet shows operations for each entity down to a single call. 
 
 ![](https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/CDSA/CDSA-Overview-API-MostUsedAPI-Excel.JPG)
 
 These spreadsheets can be used as a source for **Microsoft Power BI** reports or even **uploaded to Azure Application Insights, Azure Log Analytics for Azure Blob Storage** for extended capabilities. 
+
+NOTE: An important report that can be downloaded is the **Non-conformant usage by users with Team Member** license. Please review this report to ensure your organization is [aligned with the **Release Wave 1 2020** announcement](https://docs.microsoft.com/en-us/dynamics365-release-plan/2020wave1/dynamics365-sales/license-enforcement-users-new-team-member-licenses).
 
 ### Common Data Service for Analytics PowerShell cmdlets
 
