--- a/docs/04.01 - Monitoring Power Virtual Agents - Analytics.md
+++ b/docs/04.01 - Monitoring Power Virtual Agents - Analytics.md
@@ -8,6 +8,8 @@ This article will focus on Power Virtual Agent Analytics and how to review the m
 
 ## The Case for Power Virtual Agents
 
+Gartner forecasts that by 
+
 Using Power Virtual Agents, you can:
 
 - **Empower your teams** by allowing them to easily build bots themselves without needing intermediaries, or coding or AI expertise.
@@ -32,39 +34,110 @@ With the appropriate permissions, an admin will land on the **Usage** report for
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/NavigateTo.JPG"  />
 
-#### Power Automate Reports
+## What to look for: Engagements, Sessions and Satisfaction
 
-**Bot Performance and Usage**
+When I began my research into the Power Virtual Agent Analytics feature I was drawn to a statement I heard from [Michael Vakoc](https://powervirtualagents.microsoft.com/en-us/blog/author/mivakoc/), Program Manager for Power Virtual Agents, regarding what I should be looking to continuously improve my bot. Understanding resolution metrics and how we can work to increase this key performance indicator should be the driver of optimization. Resolution means, did my bot successfully deliver information, answer a question or overall provide satisfaction to its user. This can be drilled down to  a single imperative question to the user, ***Did the bot HELP solve a problem***? 
 
-Review overall analytics for your bots.
+### Expanding Engagement
 
-https://docs.microsoft.com/en-us/power-virtual-agents/analytics-summary
+Each time a bot user begins interacting with the Power Virtual Agent a session is created. Upon initiation, the bot will search through its catalog or conversational topics to find the appropriate topic to engage with the user. Success is driven on the match of the user ask and the topic created by designers.
 
-Summary
+As analysts we will work with the reports and data to identify where the bot was not able to successfully link a user ask or problem with a topic. This is called expanding the engagement of bots and it is a major KPI for how well your bot is performing.
 
-##### **<u>Engagement over time</u>**
+### Analyzing Engagement and Session Outcomes
 
-An engaged session represents a session in which a specific user created topic was triggered. This metric also includes when a session is ended resulting in an escalation regardless if the Transfer to Agent is turned on or not.
+Power Virtual Agent Analytics provides us a great way to see how we can increase resolution by providing metrics on Abandonment and Escalation. Each session offers analysts these three data points, Resolution, Abandonment and Escalation which can be used by analysts.
 
+### Increase Resolution
 
+To understand how we can increase resolution we need to discuss what metrics impact it. A user responding yes to the above question is paramount to what we call resolution, so we have to analyze what may drive a user to respond no. A great article to review when designing your bot is aptly titled **[Principals of bot design](https://docs.microsoft.com/en-us/azure/bot-service/bot-service-design-principles?view=azure-bot-service-4.0)**. The key pillars that drive successful resolution include: 
 
-##### **<u>Session outcomes</u>**
+- Does the bot easily solve the user’s problem with the minimum number of steps?
+- Does the bot solve the user’s problem better/easier/faster than any of the alternative experiences?
+- Does the bot run on the devices and platforms the user cares about?
+- Is the bot discoverable? Do the users naturally know what to do when using it?
 
-##### **<u>Resolution Rate</u>**
+**<u>Ultimately, our goal as designers is to attempt to solve the above questions, working with the analytics provided to address our bots gaps or inefficiencies to help and empower our users.</u>** 
 
-##### <u>Escalation Rate</u>
+### Decrease Abandonment and Escalation
 
-##### <u>Abandon Rate</u>
+**Abandonment** typically means that a user left a session open or did not complete the session as expected. This could represent actions like leaving shopping carts open without purchasing, hanging up or navigating away or simply leaving for an extended period of time. **<u>For Power Virtual Agents, abandonment per [this deep dive](https://www.youtube.com/watch?v=o8o9kPGAq5E&feature=youtu.be) is calculated as non interaction after a 30 minutes to one hour time period.</u>** Abandonment metrics can point to a topic or engagement that needs to be looked at. Further in the article we will explore charts and session details which can help find where a user may become disengaged and abandon the session.
 
-**The Abandon rate chart** 
+**Escalation** on the other hand represents a negative impact to our **resolution** metric. Its important to point out here that while this number does negatively impact resolution, its not an indicator that the bot did not do its job as intended. [Some questions or issues are too complex and need to be transferred to a live person.](https://docs.microsoft.com/en-us/azure/bot-service/bot-service-design-pattern-handoff-human?view=azure-bot-service-4.0) This transfer would be represented as an escalation in the **Power Virtual Agents Analytics** charts. What would be helpful for an analyst is to review the escalations, along with conversations and feedback from the agent who the bot handed off to. **<u>Combining the session data and human agent feedback, we can analyze and suggest to authors where a topic could be enhanced to help triage.</u>**
 
-The **Abandon rate drivers chart** is useful for admins to see which topics are being abandoned at what rate percentage. Within this chart an admin can drill down to a specific topic by clicking the **Detail** link which will route to **the Topic Analytics report**.
+## Power Virtual Agent Reports
 
-**Customer Satisfaction**
+### **Summary**
 
-Identify overall trends in customer satisfaction, and where satisfaction is falling behind.
+**Key Performance Indicators**
 
-https://docs.microsoft.com/en-us/power-virtual-agents/analytics-csat
+At the top of [**the Summary report**](https://docs.microsoft.com/en-us/power-virtual-agents/analytics-summary#summary-charts) are **Key Performance Indicators** showing the number of sessions, the engagement rate and the outcomes. Included as well is the **customer satisfaction (CSAT) percentage**. Each of the KPIs includes a percentage **showing the trend over the given time frame**. This area is useful to visualize the overall analytics for your specific bot.
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/Summary-KPI_Header.JPG" style="zoom: 67%;" />
+
+##### **Engagement over time**
+
+An engaged session represents a session in which a specific user created or escalation topic was triggered. This is helpful to understand topic gaps.
+
+<insert engage over time>
+
+##### **Session outcomes**
+
+As described above, session outcomes help us understand if a bot helped answer the imperative question. We tend to want to see the resolution rate in the KPI increasing and if its not this chart can help. The chart shows session outcomes over a period of time so we can begin to see downward trends.
+
+<insert session outcome image>
+
+##### **Resolution Rate** KPI and Drivers
+
+The **Resolution KPI** in the header includes the percentage and the trend during our selected time frame. 
+
+<insert KPI>
+
+The **Resolution rate drivers chart** is useful for admins to see which topics are successfully resolved at what rate percentage. Hovering over each topic, an admin can see the impact on the overall resolution rate. **Higher impact means this topic represents something useful for users** and could be a foundation for other topics. 
+
+A **red bar represents negative impact** while a **blue bar represents positive**. The length is the amount of impact. Within this chart an admin can drill down to a specific topic by clicking the **Detail** link which will route to **the Topic Analytics report**.
+
+<insert resolition rate driver>
+
+##### Escalation Rate KPI and Drivers
+
+The Resolution KPI in the header includes the percentage and the trend during our selected time frame. 
+
+<insert KPI>
+
+The **Escalation rate drivers chart** is useful for admins to see which topics are being abandoned at what rate percentage. Hovering over each topic, an admin can see the impact on the overall resolution rate. **Higher impact means this topic represents an increase in a handoff to a live agent**. As stated above, due to the complex nature of some questions or issues **this doesn't necessarily represent a bad thing**. However this is a great chart to **begin drilling into to find conversation points with the live agent** to ensure the bot is providing usefulness.
+
+A **red bar represents negative impact** while a **blue bar represents positive**. The length is the amount of impact. Within this chart an admin can drill down to a specific topic by clicking the **Detail** link which will route to **the Topic Analytics report**.
+
+<insert escalation rate driver>
+
+##### Abandon Rate KPI and Drivers
+
+The Resolution KPI in the header includes the percentage and the trend during our selected time frame. 
+
+<inseert kpi>
+
+The **Abandon rate drivers chart** is useful for admins to see which topics are being abandoned at what rate percentage. Hovering over each topic, an admin can see the impact on the overall resolution rate. **Higher impact means this topic represents a clear metric for improvement** and could be used for other topic improvements. Reviewing the conversational data for these topics, **<u>analysts can investigate where a user may have lost interest and how to keep them engaged</u>**.
+
+A **red bar represents negative impact** while a **blue bar represents positive**. The length is the amount of impact. Within this chart an admin can drill down to a specific topic by clicking the **Detail** link which will route to **the Topic Analytics report**.
+
+<insert abandon rate driver>
+
+### **Customer Satisfaction**
+
+Customer satisfaction leads to increased usage of our bot and this report help identify which topics are having the most impact in this area. [The **Customer Satisfaction** report](https://docs.microsoft.com/en-us/power-virtual-agents/analytics-csat) is where analysts will go to stay informed in this area. Topics with a high CSAT impact are great but look to couple this with the number of engaged sessions. In the deep dive its suggested to sort by the highest engaged sessions and starting there as they represent the most popular sessions. Review the CSAT impact of this topic as well as the outcome KPIs.
+
+<insert csat image>
+
+The Average CSAT Score is a great way to see how customer satisfaction has been trending over past week or month.
+
+<insert avg csat>
+
+This metric goes from 1 to 5 and is driven by the customer survey at the end of the session (e.g. the smiling faces). Obviously I have some work to do with bot as it only scored a **2.8**!
+
+<response rate image>
+
+The CSAT response rate over time can help analysts visualize completed and incomplete surveys.
 
 **Topic Usage**
 
@@ -72,51 +145,37 @@ See how individual topics are doing and how well they're working at resolving is
 
 https://docs.microsoft.com/en-us/power-virtual-agents/analytics-topic-details
 
-**Session Information**
+### **Session Information**
 
-Review and monitor how sessions are doing, including analytics from the topics triggered during a session.
+[The **Sessions** report](https://docs.microsoft.com/en-us/power-virtual-agents/analytics-sessions) allows admins the ability to review and monitor how sessions are doing, including the topic, transcript and outcome. The session picker currently let's admins pick from sessions within a given week.
 
-https://docs.microsoft.com/en-us/power-virtual-agents/analytics-sessions
+<insert download image>
 
-**Billed Session Information**
+When opening the spreadsheet the following columns are available: **Start Time**, **Initial User Message**, **Topic Name** and **Id**, the **Chat Transcript** and the eventual **Session Outcome**. I'll dig deeper into the transcript in a following article, keep in mind this includes the **<u>dialog in the session and both the user and bot responses</u>**.
 
-Understand how sessions are being billed, based on their usage.
+<insert excel>
+
+### **Billed Sessions**
+
+[The **Billing** report](https://docs.microsoft.com/en-us/power-virtual-agents/analytics-billed-sessions) helps to better understand how sessions are being billed, based on their usage.
 
 https://docs.microsoft.com/en-us/power-virtual-agents/analytics-billed-sessions
+
+### Topic Analytics Report
+
+
 
 #### Filtering the data returned
 
 The Power Automate Analytics will show environments an admin has access to review data for. During acceptance or end to end testing, admins may want to focus on a specific environment and time range. [To do this](https://docs.microsoft.com/en-us/power-platform/admin/analytics-powerapps#how-do-i-change-environments), click the "**Change filters**" button for any dashboard.
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/Analytics-Filters.JPG" style="zoom: 67%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/Summary-KPI_Header.JPG" style="zoom: 67%;" />
 
 #### Export data for Analysis
 
 Currently the ability to export from the **Power Platform Admin Center** is not available as it is with the **Common Data Service for Analytics**. I would expect this to change and will update this article once more information is available. Until then [**most charts can be exported via the ellipsis**](https://docs.microsoft.com/en-us/power-platform/admin/analytics-flow#download-reports) like other **Microsoft Power BI** reports. 
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/ExportData.JPG" style="zoom: 67%;" />
-
-## Service Health within the Power Platform Admin Center
-
-Recently announced in the **Release Wave 1 for 2020** is a [unified service health experience within the Power Platform Admin Center](https://docs.microsoft.com/en-us/power-platform-release-plan/2020wave1/power-platform-governance-administration/unified-service-health-experience-power-platform-admin-center). This will allow admins the ability to focus efforts within the **Power Platform Admin Center**, not having to navigate to the **Office 365 Portal** for service health. This reduces Environment Admins from potentially interacting with Office 365 items and to focus on the **Power Platform** specifically. [According to the article the ability to set up alerts for service outages will be coming as part of the September 2020 general availability](https://docs.microsoft.com/en-us/power-platform-release-plan/2020wave1/power-platform-governance-administration/service-health-power-platform-admin-center).
-
-## My Flow Analytics
-
-[Announced in 2017](https://flow.microsoft.com/en-us/blog/announcing-microsoft-flow-analytics/), **Microsoft Flows Analytics** today are useful for makers who want to review the flows created in the **My Flows area of the Maker Portal**. To view these analytics, navigate to the **My Flows** area and select a flow. 
-
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/MyFlows-navigateTo.JPG" style="zoom: 67%;" />
-
-Once the **Overview window** opens, in the toolbar click the **Analytics** button.
-
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/MyFlows-analyticsButton.JPG" style="zoom: 67%;" />
-
-**The Usage report** shows **total runs by day**, **number of runs** and **trending flow runs**. 
-
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/3-Flowanalytics.png" style="zoom: 67%;" />
-
-**The Errors report** shows **errors by day**, **errors by type** and **error details** which can all be filtered by a specific action in you flow.
-
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/MyFlows-ErrorReport.JPG" style="zoom: 67%;" />
 
 ## Next Steps
 
