--- a/docs/04.01 - Monitoring Power Virtual Agents - Analytics.md
+++ b/docs/04.01 - Monitoring Power Virtual Agents - Analytics.md
@@ -8,29 +8,25 @@ This article will focus on Power Virtual Agent Analytics and how to review the m
 
 ## The Case for Power Virtual Agents
 
-Gartner forecasts that by 
+A common theme I've heard when talking about bots revolve around their usefulness and the idea that they could possibly replace some jobs. [According to Gartner by 2020, AI will generate 2.3 million jobs and by 2025 net new jobs will reach 2 million.](https://www.cnbc.com/2017/12/18/artificial-intelligence-will-create-more-jobs-than-it-ends-gartner.html) *NOTE: This link is to an article reporting on the report.*
 
-Using Power Virtual Agents, you can:
+[This Gartner report](https://www.gartner.com/smarterwithgartner/4-uses-for-chatbots-in-the-enterprise/) showcases some of the uses for chatbot in the enterprise and is worth checking out. 
+
+With Microsoft Power Virtual Agents, you can:
 
 - **Empower your teams** by allowing them to easily build bots themselves without needing intermediaries, or coding or AI expertise.
 - **Reduce costs** by easily automating common inquiries and freeing human agent time to deal with more complex issues.
 - **Improve customer satisfaction** by allowing customers to self-help and resolve issues quickly 24/7 using rich personalized bot conversations.
 
+As with other pillars of the Power Platform, Power Virtual Agents represent a no code solution to virtual assistants. These assistants can be completely authored within the Virtual Agent Authoring Canvas without the need of Bot Framework experience. If an integration is needed, say for use with Cognitive Services, Microsoft Power Automate can be invoked natively from a topic. This allows the bot authors to focus on how to drive the conversation towards a resolution to better serve an organization's customers and provide employees assistance with tasks.
+
 ## Power Virtual Agent Analytics
 
 ### Power Virtual Agent Analytics in the Virtual Agent Home Page
 
-
-
-#### Who can access this data?
-
-From what I have seen, if you have the [appropriate licensing as a user within your tenant.](https://docs.microsoft.com/en-us/power-virtual-agents/requirements-licensing) to access the management portal for Power Virtual Agents you can view analytics.
-
-
-
 #### Navigating the Portal
 
-With the appropriate permissions, an admin will land on the **Usage** report for Power Apps Analytics. 
+With the appropriate licensing, an analyst can navigate to https://powerva.microsoft.com which will land you on the Home Page. From there, you can navigate to the **Analytics** dashboard. 
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/NavigateTo.JPG"  />
 
@@ -79,13 +75,13 @@ At the top of [**the Summary report**](https://docs.microsoft.com/en-us/power-vi
 
 An engaged session represents a session in which a specific user created or escalation topic was triggered. This is helpful to understand topic gaps.
 
-<insert engage over time>
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/Summary-EngagementOverTimeGraph.JPG" style="zoom: 67%;" />
 
 ##### **Session outcomes**
 
 As described above, session outcomes help us understand if a bot helped answer the imperative question. We tend to want to see the resolution rate in the KPI increasing and if its not this chart can help. The chart shows session outcomes over a period of time so we can begin to see downward trends.
 
-<insert session outcome image>
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/Summary-SessionsOverTime.JPG" style="zoom: 67%;" />
 
 ##### **Resolution Rate** KPI and Drivers
 
@@ -93,11 +89,15 @@ The **Resolution KPI** in the header includes the percentage and the trend durin
 
 <insert KPI>
 
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/Summary-EngagementOverTimeGraph.JPG" style="zoom: 67%;" />
+
 The **Resolution rate drivers chart** is useful for admins to see which topics are successfully resolved at what rate percentage. Hovering over each topic, an admin can see the impact on the overall resolution rate. **Higher impact means this topic represents something useful for users** and could be a foundation for other topics. 
 
 A **red bar represents negative impact** while a **blue bar represents positive**. The length is the amount of impact. Within this chart an admin can drill down to a specific topic by clicking the **Detail** link which will route to **the Topic Analytics report**.
 
 <insert resolition rate driver>
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/Summary-EngagementOverTimeGraph.JPG" style="zoom: 67%;" />
 
 ##### Escalation Rate KPI and Drivers
 
@@ -105,11 +105,15 @@ The Resolution KPI in the header includes the percentage and the trend during ou
 
 <insert KPI>
 
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/Summary-EngagementOverTimeGraph.JPG" style="zoom: 67%;" />
+
 The **Escalation rate drivers chart** is useful for admins to see which topics are being abandoned at what rate percentage. Hovering over each topic, an admin can see the impact on the overall resolution rate. **Higher impact means this topic represents an increase in a handoff to a live agent**. As stated above, due to the complex nature of some questions or issues **this doesn't necessarily represent a bad thing**. However this is a great chart to **begin drilling into to find conversation points with the live agent** to ensure the bot is providing usefulness.
 
 A **red bar represents negative impact** while a **blue bar represents positive**. The length is the amount of impact. Within this chart an admin can drill down to a specific topic by clicking the **Detail** link which will route to **the Topic Analytics report**.
 
 <insert escalation rate driver>
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/Summary-EngagementOverTimeGraph.JPG" style="zoom: 67%;" />
 
 ##### Abandon Rate KPI and Drivers
 
@@ -117,11 +121,15 @@ The Resolution KPI in the header includes the percentage and the trend during ou
 
 <inseert kpi>
 
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/Summary-EngagementOverTimeGraph.JPG" style="zoom: 67%;" />
+
 The **Abandon rate drivers chart** is useful for admins to see which topics are being abandoned at what rate percentage. Hovering over each topic, an admin can see the impact on the overall resolution rate. **Higher impact means this topic represents a clear metric for improvement** and could be used for other topic improvements. Reviewing the conversational data for these topics, **<u>analysts can investigate where a user may have lost interest and how to keep them engaged</u>**.
 
 A **red bar represents negative impact** while a **blue bar represents positive**. The length is the amount of impact. Within this chart an admin can drill down to a specific topic by clicking the **Detail** link which will route to **the Topic Analytics report**.
 
 <insert abandon rate driver>
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/Summary-EngagementOverTimeGraph.JPG" style="zoom: 67%;" />
 
 ### **Customer Satisfaction**
 
@@ -129,13 +137,19 @@ Customer satisfaction leads to increased usage of our bot and this report help i
 
 <insert csat image>
 
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/Summary-EngagementOverTimeGraph.JPG" style="zoom: 67%;" />
+
 The Average CSAT Score is a great way to see how customer satisfaction has been trending over past week or month.
 
 <insert avg csat>
 
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/Summary-EngagementOverTimeGraph.JPG" style="zoom: 67%;" />
+
 This metric goes from 1 to 5 and is driven by the customer survey at the end of the session (e.g. the smiling faces). Obviously I have some work to do with bot as it only scored a **2.8**!
 
 <response rate image>
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/Summary-EngagementOverTimeGraph.JPG" style="zoom: 67%;" />
 
 The CSAT response rate over time can help analysts visualize completed and incomplete surveys.
 
@@ -151,15 +165,21 @@ https://docs.microsoft.com/en-us/power-virtual-agents/analytics-topic-details
 
 <insert download image>
 
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/Summary-EngagementOverTimeGraph.JPG" style="zoom: 67%;" />
+
 When opening the spreadsheet the following columns are available: **Start Time**, **Initial User Message**, **Topic Name** and **Id**, the **Chat Transcript** and the eventual **Session Outcome**. I'll dig deeper into the transcript in a following article, keep in mind this includes the **<u>dialog in the session and both the user and bot responses</u>**.
 
 <insert excel>
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/Summary-EngagementOverTimeGraph.JPG" style="zoom: 67%;" />
 
 ### **Billed Sessions**
 
 [The **Billing** report](https://docs.microsoft.com/en-us/power-virtual-agents/analytics-billed-sessions) helps to better understand how sessions are being billed, based on their usage.
 
 https://docs.microsoft.com/en-us/power-virtual-agents/analytics-billed-sessions
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/Summary-EngagementOverTimeGraph.JPG" style="zoom: 67%;" />
 
 ### Topic Analytics Report
 
@@ -175,7 +195,7 @@ The Power Automate Analytics will show environments an admin has access to revie
 
 Currently the ability to export from the **Power Platform Admin Center** is not available as it is with the **Common Data Service for Analytics**. I would expect this to change and will update this article once more information is available. Until then [**most charts can be exported via the ellipsis**](https://docs.microsoft.com/en-us/power-platform/admin/analytics-flow#download-reports) like other **Microsoft Power BI** reports. 
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/ExportData.JPG" style="zoom: 67%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/Summary-EngagementOverTimeGraph.JPG" style="zoom: 67%;" />
 
 ## Next Steps
 
