added rate drivers for KPI

--- a/docs/04.01 - Monitoring Power Virtual Agents - Analytics.md
+++ b/docs/04.01 - Monitoring Power Virtual Agents - Analytics.md
@@ -87,25 +87,19 @@ As described above, session outcomes help us understand if a bot helped answer t
 
 The **Resolution KPI** in the header includes the percentage and the trend during our selected time frame. 
 
-<insert KPI>
-
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/Summary-EngagementOverTimeGraph.JPG" style="zoom: 67%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/Topic-Analytics-ResolutionKPI.JPG"  />
 
 The **Resolution rate drivers chart** is useful for admins to see which topics are successfully resolved at what rate percentage. Hovering over each topic, an admin can see the impact on the overall resolution rate. **Higher impact means this topic represents something useful for users** and could be a foundation for other topics. 
 
 A **red bar represents negative impact** while a **blue bar represents positive**. The length is the amount of impact. Within this chart an admin can drill down to a specific topic by clicking the **Detail** link which will route to **the Topic Analytics report**.
 
-<insert resolition rate driver>
-
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/Summary-EngagementOverTimeGraph.JPG" style="zoom: 67%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/Topic-Analytics-ResolutionRateImpact.JPG"  />
 
 ##### Escalation Rate KPI and Drivers
 
 The Resolution KPI in the header includes the percentage and the trend during our selected time frame. 
 
-<insert KPI>
-
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/Summary-EngagementOverTimeGraph.JPG" style="zoom: 67%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/Topic-Analytics-EscalationKPI.JPG"  />
 
 The **Escalation rate drivers chart** is useful for admins to see which topics are being abandoned at what rate percentage. Hovering over each topic, an admin can see the impact on the overall resolution rate. **Higher impact means this topic represents an increase in a handoff to a live agent**. As stated above, due to the complex nature of some questions or issues **this doesn't necessarily represent a bad thing**. However this is a great chart to **begin drilling into to find conversation points with the live agent** to ensure the bot is providing usefulness.
 
