added csat image

--- a/docs/04.01 - Monitoring Power Virtual Agents - Analytics.md
+++ b/docs/04.01 - Monitoring Power Virtual Agents - Analytics.md
@@ -2,9 +2,9 @@
 
 ## Summary
 
-Microsoft Power Virtual Agents provide Makers the ability to create virtual assistances and agents to help customers and employees. An authoring canvas guides makers through the process of building and publishing bots without the need of developing with the Microsoft Bot Framework. This removes the barriers of entry, allowing designers and Makers to focus on rich meaningful conversations.
+**Microsoft Power Virtual Agents** provide Makers the ability to create virtual assistances and agents to help customers and employees. An authoring canvas guides makers through the process of building and publishing bots without the need of developing with the **Microsoft Bot Framework**. This removes the barriers of entry, **allowing designers and Makers to focus on rich meaningful conversations**.
 
-This article will focus on Power Virtual Agent Analytics and how to review the metrics from user sessions and conversations to work towards increased customer satisfaction and user productivity. 
+This article will focus on **Power Virtual Agent Analytics** and how to review the metrics from user sessions and conversations to work towards **increased customer satisfaction and user productivity**. 
 
 ## The Case for Power Virtual Agents
 
@@ -12,13 +12,13 @@ A common theme I've heard when talking about bots revolve around their usefulnes
 
 [This Gartner report](https://www.gartner.com/smarterwithgartner/4-uses-for-chatbots-in-the-enterprise/) showcases some of the uses for chatbot in the enterprise and is worth checking out. 
 
-With Microsoft Power Virtual Agents, you can:
+With **Microsoft Power Virtual Agents**, you can:
 
 - **Empower your teams** by allowing them to easily build bots themselves without needing intermediaries, or coding or AI expertise.
 - **Reduce costs** by easily automating common inquiries and freeing human agent time to deal with more complex issues.
 - **Improve customer satisfaction** by allowing customers to self-help and resolve issues quickly 24/7 using rich personalized bot conversations.
 
-As with other pillars of the Power Platform, Power Virtual Agents represent a no code solution to virtual assistants. These assistants can be completely authored within the Virtual Agent Authoring Canvas without the need of Bot Framework experience. If an integration is needed, say for use with Cognitive Services, Microsoft Power Automate can be invoked natively from a topic. This allows the bot authors to focus on how to drive the conversation towards a resolution to better serve an organization's customers and provide employees assistance with tasks.
+As with other pillars of the **Power Platform**, **Power Virtual Agents** represent a no code solution to virtual assistants. These assistants can be completely authored within the **Virtual Agent Authoring Canvas** without the need of **Bot Framework** experience. If an integration is needed, say for use with **Cognitive Services**, **Microsoft Power Automate** can be invoked natively from a topic. This allows the bot authors to focus on how to drive the conversation towards a resolution to better serve an organization's customers and provide employees assistance with tasks.
 
 ## Power Virtual Agent Analytics
 
@@ -26,23 +26,25 @@ As with other pillars of the Power Platform, Power Virtual Agents represent a no
 
 #### Navigating the Portal
 
-With the appropriate licensing, an analyst can navigate to https://powerva.microsoft.com which will land you on the Home Page. From there, you can navigate to the **Analytics** dashboard. 
+With the appropriate licensing, an analyst can navigate to https://powerva.microsoft.com which will land you on the **Home Page**. From there, you can navigate to the **Analytics** dashboard. 
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomateAnalytics/NavigateTo.JPG"  />
 
 ## What to look for: Engagements, Sessions and Satisfaction
 
-When I began my research into the Power Virtual Agent Analytics feature I was drawn to a statement I heard from [Michael Vakoc](https://powervirtualagents.microsoft.com/en-us/blog/author/mivakoc/), Program Manager for Power Virtual Agents, regarding what I should be looking to continuously improve my bot. Understanding resolution metrics and how we can work to increase this key performance indicator should be the driver of optimization. Resolution means, did my bot successfully deliver information, answer a question or overall provide satisfaction to its user. This can be drilled down to  a single imperative question to the user, ***Did the bot HELP solve a problem***? 
+When I began my research into the **Power Virtual Agent Analytics** feature I was drawn to a statement I heard from [Michael Vakoc](https://powervirtualagents.microsoft.com/en-us/blog/author/mivakoc/), *Program Manager* for **Power Virtual Agents**, regarding what I should be looking to continuously improve my bot. Understanding resolution metrics and how we can work to increase this key performance indicator should be the driver of optimization. <u>**Resolution** means, did my bot successfully deliver information, answer a question or overall provide satisfaction to its user</u>. This can be drilled down to  a single **imperative question** to the user:
+
+<u>***Did the bot HELP solve a problem***?</u> 
 
 ### Expanding Engagement
 
-Each time a bot user begins interacting with the Power Virtual Agent a session is created. Upon initiation, the bot will search through its catalog or conversational topics to find the appropriate topic to engage with the user. Success is driven on the match of the user ask and the topic created by designers.
+Each time a bot user begins interacting with the **Power Virtual Agent** a session is created. Upon initiation, the bot will search through its catalog or conversational topics to find the appropriate topic to engage with the user. Success is driven on the match of the user ask and the topic created by designers.
 
 As analysts we will work with the reports and data to identify where the bot was not able to successfully link a user ask or problem with a topic. This is called expanding the engagement of bots and it is a major KPI for how well your bot is performing.
 
 ### Analyzing Engagement and Session Outcomes
 
-Power Virtual Agent Analytics provides us a great way to see how we can increase resolution by providing metrics on Abandonment and Escalation. Each session offers analysts these three data points, Resolution, Abandonment and Escalation which can be used by analysts.
+**Power Virtual Agent Analytics** provides us a great way to see how we can increase resolution by providing metrics on Abandonment and Escalation. Each session offers analysts these three data points, **Resolution**, **Abandonment** and **Escalation** which can be used by analysts.
 
 ### Increase Resolution
 
@@ -64,6 +66,8 @@ To understand how we can increase resolution we need to discuss what metrics imp
 ## Power Virtual Agent Reports
 
 ### **Summary**
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/overview-analytics.png" style="zoom: 67%;" />
 
 **Key Performance Indicators**
 
@@ -105,25 +109,19 @@ The **Escalation rate drivers chart** is useful for admins to see which topics a
 
 A **red bar represents negative impact** while a **blue bar represents positive**. The length is the amount of impact. Within this chart an admin can drill down to a specific topic by clicking the **Detail** link which will route to **the Topic Analytics report**.
 
-<insert escalation rate driver>
-
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/Summary-EngagementOverTimeGraph.JPG" style="zoom: 67%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/Topic-Analytics-EscalationRateDriver.JPG"  />
 
 ##### Abandon Rate KPI and Drivers
 
 The Resolution KPI in the header includes the percentage and the trend during our selected time frame. 
 
-<inseert kpi>
-
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/Summary-EngagementOverTimeGraph.JPG" style="zoom: 67%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/Topic-Analytics-AbandonmentKPI.JPG"  />
 
 The **Abandon rate drivers chart** is useful for admins to see which topics are being abandoned at what rate percentage. Hovering over each topic, an admin can see the impact on the overall resolution rate. **Higher impact means this topic represents a clear metric for improvement** and could be used for other topic improvements. Reviewing the conversational data for these topics, **<u>analysts can investigate where a user may have lost interest and how to keep them engaged</u>**.
 
 A **red bar represents negative impact** while a **blue bar represents positive**. The length is the amount of impact. Within this chart an admin can drill down to a specific topic by clicking the **Detail** link which will route to **the Topic Analytics report**.
 
-<insert abandon rate driver>
-
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/Summary-EngagementOverTimeGraph.JPG" style="zoom: 67%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/Topic-Analytics-AbandonRateDriver.JPG"  />
 
 ### **Customer Satisfaction**
 
@@ -133,39 +131,27 @@ Customer satisfaction leads to increased usage of our bot and this report help i
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/Summary-EngagementOverTimeGraph.JPG" style="zoom: 67%;" />
 
-The Average CSAT Score is a great way to see how customer satisfaction has been trending over past week or month.
+The **Average CSAT Score** is a great way to see how customer satisfaction has been trending over past week or month.
 
-<insert avg csat>
-
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/Summary-EngagementOverTimeGraph.JPG" style="zoom: 67%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/CSAT-AverageCsatScore.JPG"  />
 
 This metric goes from 1 to 5 and is driven by the customer survey at the end of the session (e.g. the smiling faces). Obviously I have some work to do with bot as it only scored a **2.8**!
 
-<response rate image>
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/CSAT-CsatSurveyResponseRate.JPG"  />
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/Summary-EngagementOverTimeGraph.JPG" style="zoom: 67%;" />
-
-The CSAT response rate over time can help analysts visualize completed and incomplete surveys.
-
-**Topic Usage**
-
-See how individual topics are doing and how well they're working at resolving issues.
-
-https://docs.microsoft.com/en-us/power-virtual-agents/analytics-topic-details
+The **CSAT survey response rate** over time can help analysts visualize completed and incomplete surveys.
 
 ### **Session Information**
 
 [The **Sessions** report](https://docs.microsoft.com/en-us/power-virtual-agents/analytics-sessions) allows admins the ability to review and monitor how sessions are doing, including the topic, transcript and outcome. The session picker currently let's admins pick from sessions within a given week.
 
-<insert download image>
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/Summary-EngagementOverTimeGraph.JPG" style="zoom: 67%;" />
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/Session-Download.JPG" style="zoom: 67%;" />
 
 When opening the spreadsheet the following columns are available: **Start Time**, **Initial User Message**, **Topic Name** and **Id**, the **Chat Transcript** and the eventual **Session Outcome**. I'll dig deeper into the transcript in a following article, keep in mind this includes the **<u>dialog in the session and both the user and bot responses</u>**.
 
-<insert excel>
-
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/Summary-EngagementOverTimeGraph.JPG" style="zoom: 67%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/Session-Excel.JPG"  />
 
 ### **Billed Sessions**
 
@@ -173,11 +159,15 @@ When opening the spreadsheet the following columns are available: **Start Time**
 
 https://docs.microsoft.com/en-us/power-virtual-agents/analytics-billed-sessions
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/Summary-EngagementOverTimeGraph.JPG" style="zoom: 67%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerVirtualAgentAnalytics/analytics-billed-sessions.png" style="zoom: 67%;" />
 
 ### Topic Analytics Report
 
+**Topic Usage**
 
+See how individual topics are doing and how well they're working at resolving issues.
+
+https://docs.microsoft.com/en-us/power-virtual-agents/analytics-topic-details
 
 #### Filtering the data returned
 
